javascript file added

--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
         </pre>
       </code>
       <i>above code iterated 3 time and printed 3 results.</i>
+      <br />
+      <i class="line"
+        >Note: above code already executed on same page, please check
+        console.log</i
+      >
       <hr />
       <h3>iteration using for in loop</h3>
       <p>
@@ -112,6 +117,11 @@
         above code iterated as per keys in an object and printed the results.
         FYI this also can be used to iterate arrays also.
       </i>
+      <br />
+      <i class="line"
+        >Note: above code already executed on same page, please check
+        console.log</i
+      >
       <hr />
       <h3>iteration using for of loop</h3>
       <p>
@@ -155,6 +165,11 @@
         above code iterated as per keys in an object and printed the results.
         FYI this also can be used to iterate arrays, map, set also
       </i>
+      <br />
+      <i class="line"
+        >Note: above code already executed on same page, please check
+        console.log</i
+      >
       <hr />
       <h3>iteration using forEach method</h3>
       <p>The forEach() method calls a function for each element in an array.</p>
@@ -198,6 +213,11 @@
         Note: Under ECMAScript 5, you have to combine Object.keys() and
         Array.prototype.forEach(): for using forEach method in object
       </i>
+      <br />
+      <i class="line"
+        >Note: above code already executed on same page, please check
+        console.log</i
+      >
     </div>
     <div class="wrapper" id="resume">
       <h1>Creating Resume in Json format</h1>
@@ -236,6 +256,11 @@
 </pre
         >
       </code>
+      <br />
+      <i class="line"
+        >Note: above code already executed on same page, please check
+        console.log</i
+      >
     </div>
     <div class="wrapper" id="dif">
       <h1>difference between window screen and document in javascript</h1>
@@ -287,5 +312,7 @@
         <li>screen properties availWidth and availHeight omit the toolbar</li>
       </ul>
     </div>
+    <script src="./JS/loop.js"></script>
+    <script src="./JS/resume.js"></script>
   </body>
 </html>
