after batch split - task interchanged

--- a/index.html
+++ b/index.html
@@ -10,309 +10,154 @@
   <body>
     <header>Day three - Task (by - Udhayasooriyan)</header>
     <nav>
-      <a href="#method">JSON Iterating methods</a>
-      <a href="#resume">Json format Resume Data</a>
-      <a href="#dif">diff b/w window, screen, document</a>
+      <a href="#com">Comparing JSON</a>
+      <a href="#flag">Printing flag using API</a>
+      <a href="#all">Printing required data using API</a>
     </nav>
-    <div class="wrapper" id="method">
-      <h1>JSON iterate methods using (for, for in, for of, forEach)</h1>
-      <h2>JavaScript Loops</h2>
-      <p class="intend">
-        Loops are handy, if you want to run the same code over and over again,
-        each time with a different value.Often this is the case when working
-        with arrays.
-      </p>
-      <h2>Different Kinds of Loops</h2>
-      <pre>JavaScript supports different kinds of loops:</pre>
-      <ul>
-        <li>
-          <span>for -</span> loops through a block of code a number of times
-        </li>
-        <li><span>for/in -</span> loops through the properties of an object</li>
-        <li>
-          <span>for/of -</span> loops through the values of an iterable object
-        </li>
-        <li>
-          <span>forEach -</span> loops through a block of code while a specified
-          condition is true
-        </li>
-      </ul>
-      <hr />
-      <h3>iteration using for loop</h3>
-      <pre>The for statement creates a loop with 3 optional expressions:</pre>
+    <div class="wrapper" id="com">
+      <h1>
+        Comparing two JSON have same properties without order in javascript
+      </h1>
+      <h3>Method shown below</h3>
       <code>
         <pre>
-          for (expression 1; expression 2; expression 3) {
-            // code block to be executed
-          }
-        </pre>
-      </code>
-      <h3>on above statement:</h3>
-      <p>
-        expression 1: it can be declared outside for loop; <br />
-        expression 2: is mandatory, but if not declared, loop will never end.
-        for we need to put break when required.
-        <br />
-        expression 3: can do anything like negative increment (i--), positive
-        increment (i = i + 15), or anything else as per requirement for looping.
-      </p>
-      <h3>example shown below</h3>
-      <code>
-        <pre>
-          let employees=[
-          {"firstName":"John", "lastName":"Doe"},
-          {"firstName":"Anna", "lastName":"Smith"},
-          {"firstName":"Peter", "lastName":"Jones"}
-          ]
-        
-          for(i=0;i < employees.length;i++){
-              console.log(employees[i])
-          }
-          output will be :
-          { firstName: 'John', lastName: 'Doe' }
-          { firstName: 'Anna', lastName: 'Smith' }
-          { firstName: 'Peter', lastName: 'Jones' }
-        </pre>
-      </code>
-      <i>above code iterated 3 time and printed 3 results.</i>
-      <br />
-      <i class="line"
-        >Note: above code already executed on same page, please check
-        console.log</i
-      >
-      <hr />
-      <h3>iteration using for in loop</h3>
-      <p>
-        The JavaScript for in statement loops through the properties of an
-        Object:
-      </p>
-      <code>
-        <pre>
-          syntax
-          for (key in object) {
-            // code block to be executed
-          }
+    let obj1 = {name: "person", age: 5};
+    let obj2 = {age: 5, name: "person"};
+    let result=true;
+    if(Object.keys(obj1).length==Object.keys(obj2).length){
+        for(key in obj1) { 
+            if(obj1[key] !== obj2[key]) {
+                result=false;
+                break;
+            }
+        }
+    }
+    else {
+        result=false;
+    }
+    console.log(result);
         </pre>
       </code>
       <ul>
-        <li>The for in loop iterates over a mentioned object</li>
-        <li>Each iteration returns a key</li>
-        <li>The key is used to access the value of the key</li>
-        <li>The value of the key is mentioned object key's value</li>
-      </ul>
-      <p>example shown below</p>
-      <code>
-        <pre>
-          let person = {fname:"John", lname:"Doe", age:25};
-          for (let key in person) {
-            console.log(`${key} : ${person[key]}`)
-          } 
-          output will be :
-          fname : John
-          lname : Doe
-          age : 25
-        </pre>
-      </code>
-      <i>
-        above code iterated as per keys in an object and printed the results.
-        FYI this also can be used to iterate arrays also.
-      </i>
-      <br />
-      <i class="line"
-        >Note: above code already executed on same page, please check
-        console.log</i
-      >
-      <hr />
-      <h3>iteration using for of loop</h3>
-      <p>
-        The JavaScript for of statement loops through the values of an iterable
-        object.
-      </p>
-      <p>
-        It lets you loop over iterable data structures such as Arrays, Strings,
-        Maps, NodeLists, and more:
-      </p>
-      <code>
-        <pre>
-          syntax
-          for (variable of iterable) {
-            // code block to be executed
-          }
-        </pre>
-      </code>
-      <ul>
+        Explanation:
         <li>
-          variable - For every iteration the value of the next property is
-          assigned to the variable. Variable can be declared with const, let, or
-          var.
-        </li>
-        <li>iterable - An object that has iterable properties.</li>
-      </ul>
-      <p>example shown below</p>
-      <code>
-        <pre>
-          let person = {fname:"John", lname:"Doe", age:25};
-          for (let key of Object.keys(person)) {
-            console.log(`${key} : ${person[key]}`)
-          }
-          output will be :
-          fname : John
-          lname : Doe
-          age : 25
-        </pre>
-      </code>
-      <i>
-        above code iterated as per keys in an object and printed the results.
-        FYI this also can be used to iterate arrays, map, set also
-      </i>
-      <br />
-      <i class="line"
-        >Note: above code already executed on same page, please check
-        console.log</i
-      >
-      <hr />
-      <h3>iteration using forEach method</h3>
-      <p>The forEach() method calls a function for each element in an array.</p>
-      <p>Note : The forEach() method is not executed for empty elements.</p>
-      <code>
-        <pre>
-          syntax
-          array.forEach(function(currentValue, index, arr), thisValue)</pre
-        >
-      </code>
-      <ul>
-        <h3>parameters</h3>
-        <li>
-          <i>function()</i> -- Required. A function to run for each array
-          element.
+          first need to check both value length, if it is not same, result will
+          be false
         </li>
         <li>
-          currentValue<i></i> -- Required. The value of the current element.
-        </li>
-        <li>index<i></i> -- Optional. The index of the current element.</li>
-        <li>arr<i></i> -- Optional. The array of the current element.</li>
-        <li>
-          thisValue<i></i> -- Optional. Default undefined. A value passed to the
-          function as its this value.
+          then using for in loop need to check Key of value 1 & value 2, if it
+          is not same result will be false
         </li>
       </ul>
-      <p>example shown below</p>
-      <code>
-        <pre>
-          let person = {fname:"John", lname:"Doe", age:25};
-          Object.keys(person).forEach(function(key) {
-            console.log(`${key} : ${person[key]}`);
-          });
-          output will be :
-          fname : John
-          lname : Doe
-          age : 25
-        </pre>
-      </code>
-      <i>
-        Note: Under ECMAScript 5, you have to combine Object.keys() and
-        Array.prototype.forEach(): for using forEach method in object
-      </i>
-      <br />
       <i class="line"
-        >Note: above code already executed on same page, please check
+        >Note: above code already executed on same page, kindly check
         console.log</i
       >
     </div>
-    <div class="wrapper" id="resume">
-      <h1>Creating Resume in Json format</h1>
+    <div class="wrapper" id="flag">
+      <h1>Using Rest country API displaying flags</h1>
+      <h3>Displaying flag using API code mentioned below:</h3>
       <code>
         <pre>
-{ "Name": "Udhayasooriyan Kesavamurthy",
-"email": "usraising@gmail.com",
-"phone": "7639718893",
-"address": {
-"street": "17 west street, injikudi",
-"city": "Thiruvarur",
-"state": "Tamil Nadu",
-"Pin code": "609405"
-},
-"summary": "Experienced software developer with a focus on web applications and a passion for problem-solving.",
-"work_experience":{
-"company": "XYZ Inc",
-"position": "Full Stack Developer",
-"start_date": "zzzz-yy-xx",
-"end_date": "zzzz-yy-xx",
-"description": "Developed and maintained web applications using Node.js, React, and MongoDB."
-},
-"education":{
-"degree": "Diploma of Electrical & Electronics Engineering",
-"institution": "AVC Polytechnic college",
-"graduation_year": "2012"},
-"skills": [
-{"category": "Programming Languages",
-"items": ["Java", "JavaScript", "Python"]
-},
-{"category": "Frameworks and Libraries",
-"items": ["JavaScript", "React", "Node.js"]},
-{"category": "Databases",
-"items": ["MySQL", "MongoDB"]}
-]}
-</pre
-        >
+   
+  const req = new XMLHttpRequest();
+  req.open("GET", "https://restcountries.com/v3.1/all");
+  req.send();
+  req.addEventListener("load", request);
+  function request() {
+    let data = JSON.parse(this.responseText);
+    for (i in data) {
+    console.log(data[i].flag);
+    }}     
+        </pre>
       </code>
-      <br />
+      <h3>Explanation</h3>
+      <p>on above code mention</p>
+      <ul>
+        <li>first created a variable to request XMLHttpRequest</li>
+        <li>
+          next using req.open("GET", "https://restcountries.com/v3.1/all") in
+          this get is method & next is URL location;
+        </li>
+        <li>then sends the request to the server (used for GET)</li>
+        <li>
+          on above method data loaded on load time so using addEventListener
+          during loading time one function called request()
+        </li>
+        <li>
+          on request function, responseText parse as JSON & store in data as
+          JSON
+        </li>
+        <li>then using looping method flag printed in console</li>
+      </ul>
       <i class="line"
-        >Note: above code already executed on same page, please check
+        >Note: above code already executed on same page, kindly check
         console.log</i
       >
     </div>
-    <div class="wrapper" id="dif">
-      <h1>difference between window screen and document in javascript</h1>
-      <h3>window</h3>
-      <p>
-        Each browser tab has its own top-level window object. Each iframe and
-        deprecated frame element has its own window object too, nested within a
-        parent window. Each of these windows gets its own separate global
-        object. window.window always refers to window, but window.parent and
-        window.top might refer to enclosing windows, giving access to other
-        execution contexts. In addition to document and screen described below,
-        window properties include
-      </p>
+    <div class="wrapper" id="all">
+      <h1>Using Rest country API displaying Required data</h1>
+      <h3>Displaying required data using API code mentioned below:</h3>
+      <code>
+        <pre>
+   
+  const req = new XMLHttpRequest();
+  req.open("GET", "https://restcountries.com/v3.1/all");
+  req.send();
+  req.addEventListener("load", request);
+  function request() {
+    let data = JSON.parse(this.responseText);
+    for (i in data) {
+      console.log(
+        `Country Name : ${data[i].name.common},
+         Region: ${data[i].region},
+          Sunregion: ${data[i].subregion},
+           Population: ${data[i].population}`);
+    }}     
+        </pre>
+      </code>
+      <h3>Explanation</h3>
+      <p>on above code mention</p>
       <ul>
+        <li>first created a variable to request XMLHttpRequest</li>
         <li>
-          <span>setTimeout() and setInterval()</span> binding event handlers to
-          a timer
+          next using req.open("GET", "https://restcountries.com/v3.1/all") in
+          this get is method & next is URL location;
         </li>
-        <li><span>location</span> giving the current URL</li>
+        <li>then sends the request to the server (used for GET)</li>
         <li>
-          <span>history</span> with methods back() and forward() giving the
-          tab's mutable history
+          on above method data loaded on load time so using addEventListener
+          during loading time one function called request()
         </li>
-        <li><span>navigator</span> describing the browser software</li>
+        <li>
+          on request function, responseText parse as JSON & store in data as
+          JSON
+        </li>
+        <li>then using looping method required data printed in console</li>
       </ul>
-      <hr />
-      <h3>document</h3>
-      <p>
-        Each window object has a document object to be rendered. These objects
-        get confused in part because HTML elements are added to the global
-        object when assigned a unique id.
-      </p>
-      <br />
-      the paragraph element can be referenced by any of the following:
-      <ul>
-        <li>document.getElementById("id")</li>
-        <li>document.querySelector("#id")</li>
-        <li>document.body.firstChild</li>
-        <li>document.body.children[0]</li>
-      </ul>
-      <hr />
-      <h3>screen</h3>
-      <p>
-        The window object also has a screen object with properties describing
-        the physical display:
-      </p>
-      <ul>
-        <li>screen properties width and height are the full screen</li>
-        <li>screen properties availWidth and availHeight omit the toolbar</li>
-      </ul>
+      <i class="line"
+        >Note: above code already executed on same page, kindly check
+        console.log</i
+      >
     </div>
-    <script src="./JS/loop.js"></script>
-    <script src="./JS/resume.js"></script>
+    <script src="./JS/compareJSON.js"></script>
+    <script src="./JS/logFlagUsingAPI.js"></script>
+    <script src="./JS/logMentionedDataUsingAPI.js"></script>
+    <!-- <script>
+      console.log("script working");
+      const req = new XMLHttpRequest();
+      req.open("GET", "https://restcountries.com/v3.1/all");
+      req.send();
+      req.addEventListener("load", request);
+      function request() {
+        let data = JSON.parse(this.responseText);
+        for (i in data) {
+          console.log(`Country flag : ${data[i].flag}`);
+          console.log(
+            `Country Name : ${data[i].name.common}, Region: ${data[i].region}, Sunregion: ${data[i].subregion}, Population: ${data[i].population}`
+          );
+        }
+      }
+    </script> -->
   </body>
 </html>
